--- a/1zhiyedaode.html
+++ b/1zhiyedaode.html
@@ -85,8 +85,8 @@
   <main id="quiz"></main>
   <script>
     const questions = [
-  { type: "single", text: "1. 职业道德的底线是（ ）", options: ["个人利益的追求", "依法合规", "社会责任", "主观意识"], answer: "依法合规", explanation: "“依法合规” 是一切职业行为最基本的约束；脱离法律框架谈职业操守毫无意义。" },
-  { type: "judge", text: "2. 职业道德的核心在于维护职业声誉和形象。", options: ["对", "错"], answer: "对", explanation: "声誉＝信任资本；核心强调长期、公信力而非短期私利。" },
+  { type: "single", text: "1. 职业道德的底线是（ ）", options: ["个人利益的追求", "依法合规", "不需要承担社会责任", "主观意识"], answer: "依法合规", explanation: "“依法合规” 是一切职业行为最基本的约束；脱离法律框架谈职业操守毫无意义。" },
+  { type: "judge", text: "2. 职业道德的核心在于尊重社会公共利益。", options: ["对", "错"], answer: "对", explanation: "职业道德的核心不仅仅是追求个人成就或遵守行业规范，更重要的是尊重社会公共利益，体现出个体在职业行为中对整个社会负责的态度。这种责任意识是构建诚信、公正、和谐社会的重要基础。" },
   { type: "single", text: "3. 职业道德的基本原则之一是（ ）", options: ["诚实守信", "利益最大化", "个人自由", "技术至上"], answer: "诚实守信", explanation: "诚实守信直接关系到客户信任与合同履行，是国际通行的职业伦理标尺。" },
   { type: "single", text: "4. 职业道德要求从业人员首要满足（ ）", options: ["尊重客户需求", "滥用职权", "追求高薪", "忽视准则"], answer: "尊重客户需求", explanation: "“尊重客户”体现责任与人本意识；满足客户需求同时受底线与公平约束。" },
   { type: "multiple", text: "5. 以下四项均属于“机器对人类的影响”维度的 AI 伦理原则（多选）", options: ["以人为中心", "提升生活质量", "减少负面影响", "保障安全与利益", "不服务人类"], answer: ["以人为中心", "提升生活质量", "减少负面影响", "保障安全与利益"], explanation: "该维度聚焦 AI 如何正向增益人类；E 与题意相悖。" },
