--- a/2zhiyeshouze.html
+++ b/2zhiyeshouze.html
@@ -90,14 +90,14 @@
   { type: "single", text: "3. 勤奋进取最能体现的行为是（ ）", options: ["主动学习新技能", "完成本职即可", "忽视效率", "追求私利"], answer: "主动学习新技能", explanation: "主动学习与持续改进是“勤奋进取”的标志。" },
   { type: "single", text: "4. 忠于职守要求从业人员（ ）", options: ["推卸责任", "履行职责，不推责", "只顾利益", "忽视公司发展"], answer: "履行职责，不推责", explanation: "忠诚体现在对岗位的责任担当与职业操守。" },
   { type: "single", text: "5. 下列做法符合“团结协作”原则的是（ ）", options: ["个人英雄主义", "信息封闭", "积极合作，共担任务", "内部内卷"], answer: "积极合作，共担任务", explanation: "协作强调开放沟通与共享成果，提升团队效率。" },
-  { type: "judge", text: "6. 认真负责的关键表现是尊重他人权益和社会公共利益。", options: ["对", "错"], answer: "对", explanation: "责任感涵盖对个人、团队与社会的多重负责。" },
-  { type: "single", text: "7. 爱护设备的本质含义是（ ）", options: ["随意操作", "正确使用并定期保养", "漠视安全", "最大化个人收益"], answer: "正确使用并定期保养", explanation: "设备保养可延长寿命、降低故障风险、保障生产安全。" },
+  { type: "judge", text: "6. 认真负责的基本要求是尊重他人权益和社会公共利益。", options: ["对", "错"], answer: "对", explanation: "责任感涵盖对个人、团队与社会的多重负责。" },
+  { type: "single", text: "7. 爱护设备的基本要求是（ ）", options: ["随意操作", "正确使用并定期保养", "漠视安全", "最大化个人收益"], answer: "正确使用并定期保养", explanation: "设备保养可延长寿命、降低故障风险、保障生产安全。" },
   { type: "judge", text: "8. 安全操作的目的是确保人身和设备安全。", options: ["对", "错"], answer: "对", explanation: "安全规程防止事故，保护人员与财产，是工作质量的底线。" },
   { type: "single", text: "9. 诚实守信的基本要求包括（ ）", options: ["轻诺寡信", "忽视声誉", "遵守法律与职业准则", "只求利益"], answer: "遵守法律与职业准则", explanation: "诚信=言行一致 + 遵约守法，是职业信用的核心。" },
   { type: "single", text: "10. 在 AI 场景中体现“勇于创新”的最佳做法是（ ）", options: ["固守旧流程", "盲目追新", "尝试新算法并迭代优化", "无视风险"], answer: "尝试新算法并迭代优化", explanation: "创新依赖严谨实验与持续迭代，而非盲目寻求“新奇”。" },
   { type: "judge", text: "11. 精益求精意味着持续追求更高性能和准确性。", options: ["对", "错"], answer: "对", explanation: "在 AI 模型开发中，它体现在超参数调优、数据清洗和迭代改进。" },
   { type: "multiple", text: "12. 以下哪些做法同时符合“遵纪守法 + 爱岗敬业”双重要求？（多选）", options: ["遵守 AI 行业法规", "服从团队管理制度", "对工作充满热情", "漠视风险"], answer: ["遵守 AI 行业法规", "服从团队管理制度", "对工作充满热情"], explanation: "法规合规 + 团队纪律 + 热情投入是“硬约束 + 软动力”的结合。" },
-  { type: "multiple", text: "13. 团队协作效率主要受哪些因素影响？（多选）", options: ["沟通方式", "能力水平", "互信程度", "个人独立"], answer: ["沟通方式", "能力水平", "互信程度"], explanation: "沟通、能力、信任构成“团队协作铁三角”，直接决定产出质量。" },
+  { type: "multiple", text: "13. 团队协作效率主要受哪些因素影响？（多选）", options: ["沟通方式", "能力水平","个性差异", "互信程度", "团队管理方式"], answer: ["沟通方式", "能力水平","个性差异", "互信程度", "团队管理方式"], explanation: "在人工智能领域，技术复杂性与快速迭代要求团队不仅需关注成员个性、沟通、能力等基础协作要素，还需通过文化建设（如鼓励主动学习）和制度设计（如信任机制、沟通流程）化解潜在矛盾，最终实现高效协同。" },
   { type: "multiple", text: "14. 在 AI 项目中，诚实守信的合规行为包括（多选）", options: ["提供真实数据", "尊重知识产权", "轻易改变承诺", "伪造结果"], answer: ["提供真实数据", "尊重知识产权"], explanation: "真实数据与版权合规是确保 AI 结果可靠、避免法律风险的前提。" },
   { type: "judge", text: "15. 遵守安全操作和爱护设备在 AI 硬件实验室里并不重要。", options: ["对", "错"], answer: "错", explanation: "硬件失误可导致昂贵设备损坏甚至人员伤亡，安全与维护至关重要。" }
 ];
