--- a/5falvzhishi.html
+++ b/5falvzhishi.html
@@ -85,18 +85,18 @@
   <main id="quiz"></main>
   <script>
     const questions = [
-  { type: "single", text: "1. 试用期权利：下列哪项并非《劳动法》明确列入劳动者在试用期内“必享权利”？", options: ["获得劳动报酬", "参加工会", "休息休假", "社会保险福利"], answer: "社会保险福利", explanation: "工资、休息、入会权在试用期同样受保护；社保缴费通常伴随试用，但福利待遇细节可在转正后完善。" },
-  { type: "single", text: "2. 用人单位三大刚性义务：以下哪项不是《劳动法》列出的法定义务？", options: ["足额发薪", "缴纳社保", "提供安全卫生条件", "必须为全员提供职位技能培训"], answer: "必须为全员提供职位技能培训", explanation: "培训属鼓励/合同约定，并非强制条款；其余三项为硬性规定。" },
+  { type: "single", text: "1. 试用期权利：下列哪项并非《劳动法》明确列入劳动者在试用期内“必享权利”？", options: ["获得劳动报酬", "参加工会", "休息休假", "社会保险福利","以上所有都是试用期内享有的权利"], answer: "以上所有都是试用期内享有的权利", explanation: "工资、休息、入会权、社保缴费在试用期同样受保护。" },
+  { type: "single", text: "2. 用人单位三大刚性义务：以下哪项不是《劳动法》列出的法定义务？", options: ["足额发薪", "缴纳社保", "提供安全卫生条件", "必须为劳动者提供住宿补贴及餐补"], answer: "必须为劳动者提供住宿补贴及餐补", explanation: "在《中华人民共和国劳动法》规定的用人单位应当依法履行的义务中，按时足额支付劳动者工资、依法为劳动者缴纳社会保险费、提供安全、卫生的劳动条件和必要的劳动防护用品都是明确的法定义务。" },
   { type: "single", text: "3. 社会保险构成：下列哪一险种不属于国家法定社会保险项目？", options: ["养老", "医疗", "失业", "教育"], answer: "教育", explanation: "我国“五险”=养老、医疗、失业、工伤、生育，不含教育保险。" },
-  { type: "multiple", text: "4. 合法解除合同情形（多选）—用人单位可立即解除劳动合同的有：", options: ["试用期不符合岗位", "因工伤完全丧失劳动能力", "医疗期内患病", "被追究刑事责任"], answer: ["试用期不符合岗位", "被追究刑事责任"], explanation: "B/C 处于法定保护期，用人单位不得解除。" },
-  { type: "multiple", text: "5. 不得解除合同情形（多选）—下列属于《劳动合同法》明确保护对象：", options: ["因工伤并丧失劳动能力", "患职业病并丧失劳动能力", "连续工龄 ≥15 年且距退休 ≤5 年"], answer: ["因工伤并丧失劳动能力", "患职业病并丧失劳动能力", "连续工龄 ≥15 年且距退休 ≤5 年"], explanation: "保护弱势与临近退休群体，解除需经法定程序或协商。" },
+  { type: "multiple", text: "4. 合法解除合同情形（多选）—用人单位可立即解除劳动合同的有：", options: ["试用期不符合岗位", "因工伤完全丧失劳动能力", "劳动者患病或者非因工负伤，在规定的医疗期内的", "被追究刑事责任"], answer: ["试用期不符合岗位", "被追究刑事责任"], explanation: "B/C 处于法定保护期，用人单位不得解除。根据《劳动合同法》第四十二条第三项规定，劳动者患病或者非因工负伤，在规定的医疗期内的，用人单位不得依据本法第四十条、第四十一条的规定解除劳动合同。" },
+  { type: "multiple", text: "5. 不得解除合同情形（多选）—下列属于《劳动合同法》明确保护对象：", options: ["因工伤并丧失劳动能力", "患职业病并丧失劳动能力", "连续工龄 ≥15 年且距退休 ≤5 年","劳动者在试用期内怀孕的","劳动者在试用期间结婚的"], answer: ["因工伤并丧失劳动能力", "患职业病并丧失劳动能力", "连续工龄 ≥15 年且距退休 ≤5 年", "劳动者在试用期内怀孕的"], explanation: "保护弱势与临近退休群体，解除需经法定程序或协商。《劳动合同法》第四十二条第四项规定，女职工在孕期、产期、哺乳期的，用人单位不得解除劳动合同。试用期内怀孕的女职工同样适用该规定。" },
   { type: "judge", text: "6. 用人单位用工满 1 年仍未与劳动者签书面合同的，视为已订立无固定期限合同，并需向劳动者支付双倍工资。", options: ["对", "错"], answer: "对", explanation: "《劳动合同法》第 14 条、第 82 条规定，双重制裁防止“口头用工”规避责任。" },
   { type: "single", text: "7. 无效条款识别：以下哪类约定将导致劳动合同条款无效？", options: ["试用期 6 个月", "工作地点在外省", "“发生死亡/伤残概不负责”", "竞业限制 1 年"], answer: "“发生死亡/伤残概不负责”", explanation: "免除用人单位法定责任或排除劳动者权利的条款一律无效。" },
   { type: "single", text: "8. 数据本地化：关键信息基础设施运营者在境内收集产生的个人信息及重要数据应存储于", options: ["境外", "境内", "任意地点", "云端即可"], answer: "境内", explanation: "《网络安全法》第 37 条：境外传输需额外安全评估。" },
   { type: "multiple", text: "9. 敏感信息收集限制（多选）—通常不应采集的个人信息包括：", options: ["身份证号", "行踪轨迹", "婚恋信息", "恋人信息"], answer: ["婚恋信息", "恋人信息"], explanation: "法定原则：合法、正当、必要且与服务直接相关；婚恋/恋人信息属高度敏感私密。" },
   { type: "judge", text: "10. 网络运营者发现重大漏洞时，只需向主管部门报告，无需通知用户。", options: ["对", "错"], answer: "错", explanation: "法律要求“立刻补救 + 向部门报告 + 同时告知可能受影响的用户”，确保共同防范。" },
-  { type: "single", text: "11. 著作权权利范围：下列哪项不是著作人身权？", options: ["发表权", "署名权", "出租权", "修改权"], answer: "出租权", explanation: "出租权属著作财产权，常见于软件、音像制品。" },
-  { type: "multiple", text: "12. “未知即免责”原则（多选）—销售者在满足哪些条件时不会对专利/商标侵权承担责任？", options: ["不知情且能证明合法进货来源", "及时说明进货凭证", "积极配合权利人调查"], answer: ["不知情且能证明合法进货来源", "及时说明进货凭证", "积极配合权利人调查"], explanation: "专利法 70 条、商标法 64 条：善意取得 + 提供来源 → 不视为侵权，但仍须停止销售。" }
+  { type: "single", text: "11. 著作权权利范围：下列哪项不是著作人身权？", options: ["发表权", "署名权", "继承权", "修改权"], answer: "继承权", explanation: "著作权人的权利主要包括人身权和财产权。发表权、署名权和修改权都属于著作人身权，直接与作者的个人利益和声誉相关。" },
+  { type: "multiple", text: "12. “未知即免责”原则（多选）—销售者在满足哪些条件时不会对专利/商标/著作侵权承担责任？", options: ["不知情且能证明合法进货来源", "为介绍某一作品，适当引用他人已经发表的作品，并注明出处", "未经许可，胡乱评价他人已发表的作品","销售能证明该商品是自己合法取得并说明提供者的","未经许可，以修改、翻译、注释等方式使用他人已发表的作品"], answer: ["不知情且能证明合法进货来源", "为介绍某一作品，适当引用他人已经发表的作品，并注明出处", "未经许可，胡乱评价他人已发表的作品","销售能证明该商品是自己合法取得并说明提供者的"], explanation: "专利法 70 条、商标法 64 条：善意取得 + 提供来源 → 不视为侵权，但仍须停止销售。根据《中华人民共和国著作权法》，未经著作权人许可，对其作品进行复制、发行、表演、放映、广播、信息网络传播、改编、翻译等，都属于侵犯著作权的行为。" }
 ];
 
     const quizDiv = document.getElementById("quiz");
